--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,11 +28,16 @@ jobs: # 工作流
       #     GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }} # toKen私密变量
       #     # CODING_TOKEN: ${{ secrets.CODING_TOKEN }}
       #   run: npm install && npm run deploy
-      - name: Build and Deploy # 步骤3 （只提交到github可以使用这个步骤）
+      - name: Install and Build # 步骤3
+        run: |
+          npm install
+          npm run build
+      - name: Deploy # 步骤4 （只提交到github可以使用这个步骤）
         uses: JamesIves/github-pages-deploy-action@3.5.9 # 作用：将项目构建和部署到github。 https://github.com/JamesIves/github-pages-deploy-action
         with: # 设置环境变量
           ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }} # toKen私密变量
           BASE_BRANCH: master # 要部署的文件夹所在的分支.
           BRANCH: gh-pages # 部署到的分支
           FOLDER: docs/.vuepress/dist # 要部署的文件夹.
-          BUILD_SCRIPT: npm install && npm run build && cd docs/.vuepress/dist && echo 'www.hfwang.win' > CNAME && cd - # 部署前要执行的命令（记得cd进入某个目录后，后面要cd -退回开始的目录）
+          BUILD_SCRIPT: cd docs/.vuepress/dist && echo 'www.hfwang.win' > CNAME && cd - # 部署前要执行的命令（记得cd进入某个目录后，后面要cd -退回开始的目录）
+          # BUILD_SCRIPT: npm install && npm run build && cd docs/.vuepress/dist && echo 'www.hfwang.win' > CNAME && cd - # 部署前要执行的命令（记得cd进入某个目录后，后面要cd -退回开始的目录）
