--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,5 +39,5 @@ jobs: # 工作流
           BASE_BRANCH: master # 要部署的文件夹所在的分支.
           BRANCH: gh-pages # 部署到的分支
           FOLDER: docs/.vuepress/dist # 要部署的文件夹.
-          BUILD_SCRIPT: cd docs/.vuepress/dist && echo 'www.hfwang.win' > CNAME && cd - # 部署前要执行的命令（记得cd进入某个目录后，后面要cd -退回开始的目录）
+          BUILD_SCRIPT: cd docs/.vuepress/dist && echo 'blog.hfwang.win' > CNAME && cd - # 部署前要执行的命令（记得cd进入某个目录后，后面要cd -退回开始的目录）
           # BUILD_SCRIPT: npm install && npm run build && cd docs/.vuepress/dist && echo 'www.hfwang.win' > CNAME && cd - # 部署前要执行的命令（记得cd进入某个目录后，后面要cd -退回开始的目录）
